--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="quienes-somos.html">Quienes Somos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
                 <li><a href="nutricion.html">Nutrición</a></li>
+                <li><a href="carrito.html" id="btn-carrito">Carrito de Compra</a></li>
             </ul>
         </nav>
     </header>
