tercer commit nutricion

--- a/nutricion.html
+++ b/nutricion.html
@@ -19,8 +19,42 @@
         </nav>
     </header>
     <main>
-        <h2>Consejos de Nutrición</h2>
-        <p>Información y consejos sobre cómo llevar una vida saludable...</p>
+        <section>
+            <h2>Consejos de Nutrición</h2>
+            <p>Una dieta equilibrada es esencial para mantener un buen estado de salud y bienestar. Aquí te ofrecemos algunos consejos fundamentales:</p>
+            <ul>
+                <li><strong>Come una variedad de alimentos:</strong> Asegúrate de incluir una amplia gama de alimentos en tu dieta para obtener todos los nutrientes necesarios. Esto incluye frutas y verduras de diferentes colores, proteínas magras, granos enteros, y grasas saludables.</li>
+                <li><strong>Hidrátate adecuadamente:</strong> El agua es crucial para el funcionamiento del cuerpo. Beber suficiente agua ayuda a mantener la piel saludable, facilita la digestión y mejora la concentración.</li>
+                <li><strong>Controla las porciones:</strong> Comer porciones adecuadas puede ayudarte a evitar el exceso de calorías. Utiliza platos más pequeños y escucha a tu cuerpo para saber cuándo estás satisfecho.</li>
+                <li><strong>Reduce el consumo de azúcares añadidos y sal:</strong> Los azúcares y la sal en exceso pueden contribuir a problemas de salud como diabetes y hipertensión. Lee las etiquetas de los alimentos y elige opciones bajas en azúcares y sodio.</li>
+                <li><strong>Incorpora fibra en tu dieta:</strong> La fibra es esencial para una digestión saludable y puede ayudar a prevenir problemas gastrointestinales como el estreñimiento. Encuentra fibra en frutas, verduras, legumbres y granos enteros.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>¿Qué Debemos Comer para Mantener la Salud?</h2>
+            <p>Para asegurar una nutrición óptima, considera incluir los siguientes alimentos en tu dieta diaria:</p>
+            <ul>
+                <li><strong>Frutas y verduras:</strong> Las frutas y verduras son ricas en vitaminas, minerales y antioxidantes. Intenta consumir al menos cinco porciones al día para fortalecer tu sistema inmunológico y mejorar la salud en general.</li>
+                <li><strong>Proteínas magras:</strong> Las proteínas son esenciales para la reparación y el crecimiento de tejidos. Incluye fuentes como pescado, pollo, pavo, legumbres, nueces y tofu. Elige proteínas magras para reducir la ingesta de grasas saturadas.</li>
+                <li><strong>Granos enteros:</strong> Opta por granos enteros como avena, arroz integral y pan integral en lugar de granos refinados. Los granos enteros proporcionan más fibra y nutrientes.</li>
+                <li><strong>Grasas saludables:</strong> Las grasas saludables, como las que se encuentran en el aceite de oliva, aguacate y frutos secos, son beneficiosas para el corazón y pueden ayudar a reducir el riesgo de enfermedades cardiovasculares.</li>
+                <li><strong>Controla el consumo de alcohol:</strong> El alcohol puede afectar tu salud de varias maneras, incluyendo el aumento del riesgo de enfermedades y problemas digestivos. Si decides beber, hazlo con moderación.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Datos Interesantes sobre Alimentación</h2>
+            <p>La nutrición tiene un impacto significativo en nuestra salud física y mental. Aquí hay algunos datos interesantes que pueden ayudarte a comprender mejor la importancia de una alimentación equilibrada:</p>
+            <ul>
+                <li><strong>La comida puede influir en el estado de ánimo:</strong> Ciertos alimentos, como los ricos en omega-3 (pescado, nueces) y antioxidantes (bayas, chocolate negro), pueden ayudar a mejorar el estado de ánimo y reducir el riesgo de depresión.</li>
+                <li><strong>La microbiota intestinal juega un papel importante:</strong> Una dieta rica en fibra y probióticos puede promover una microbiota intestinal saludable, lo cual es esencial para una buena digestión, sistema inmunológico y bienestar general.</li>
+                <li><strong>La hidratación es clave para la función cognitiva:</strong> Mantenerse bien hidratado ayuda a mejorar la concentración, la memoria y el rendimiento cognitivo. La deshidratación puede afectar negativamente estas funciones.</li>
+                <li><strong>Los antioxidantes ayudan a combatir el estrés oxidativo:</strong> Alimentos ricos en antioxidantes, como frutas, verduras y té verde, ayudan a combatir el estrés oxidativo en el cuerpo y pueden reducir el riesgo de enfermedades crónicas.</li>
+                <li><strong>El impacto de la alimentación en el sueño:</strong> Algunos alimentos pueden influir en la calidad del sueño. Por ejemplo, alimentos ricos en triptófano, como el pavo y los plátanos, pueden ayudar a mejorar la calidad del sueño.</li>
+            </ul>
+        </section>
+
     </main>
     <footer>
         <p>&copy; 2024 Farmacia</p>
