--- a/nutricion.html
+++ b/nutricion.html
@@ -15,6 +15,7 @@
                 <li><a href="quienes-somos.html">Quienes Somos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
                 <li><a href="nutricion.html">Nutrición</a></li>
+                <li><a href="carrito.html" id="btn-carrito">Carrito de Compra</a></li>
             </ul>
         </nav>
     </header>
@@ -57,7 +58,7 @@
 
     </main>
     <footer>
-        <p>&copy; 2024 Farmacia</p>
+        <p>SUPER FARMA</p>
     </footer>
 </body>
 </html>
