--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmacia - Quienes Somos</title>
+    <title>SUPER FARMA - Quienes Somos</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
                 <li><a href="quienes-somos.html">Quienes Somos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
                 <li><a href="nutricion.html">Nutrición</a></li>
+                <li><a href="carrito.html" id="btn-carrito">Carrito de Compra</a></li>
             </ul>
         </nav>
     </header>
@@ -60,7 +61,7 @@
 
     </main>
     <footer>
-        <p>&copy; 2024 Farmacia</p>
+        <p>SUPER FARMA</p>
     </footer>
 </body>
 </html>
