--- a/contactos.html
+++ b/contactos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmacia - Contactos</title>
+    <title>SUPER FARMA - Contactos</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -15,16 +15,19 @@
                 <li><a href="quienes-somos.html">Quienes Somos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
                 <li><a href="nutricion.html">Nutrición</a></li>
+                <li><a href="carrito.html" id="btn-carrito">Carrito de Compra</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>Contáctanos</h2>
-        <p>Teléfono: 123-456-789</p>
-        <p>Email: contacto@farmacia.com</p>
+        <p>Teléfono: 809-456-5789</p>
+        <p>Email: Superfarma@farma.com</p>
+        <p>Dirección: Av. Kennedy esq. Maximo Goméz, dentro de la estación del metro Juan Pablo Duarte</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3266.0616841389647!2d-69.91262185447424!3d18.482731028567088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8eaf89c9763e7b01%3A0xc491c654f9f9ca40!2sJuan%20P.%20Duarte!5e0!3m2!1ses!2sdo!4v1723325753575!5m2!1ses!2sdo" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
-        <p>&copy; 2024 Farmacia</p>
+        <p>SUPER FARMA</p>
     </footer>
 </body>
 </html>
