--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmacia - Inicio</title>
+    <title>SUPER FARMA - Inicio</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenido a nuestra Farmacia</h1>
+        <h1>Bienvenido a SUPER FARMA</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -20,16 +20,13 @@
         </nav>
     </header>
     <main>
-        <h2>Nuestra misión</h2>
-        <p>Brindar salud y bienestar a nuestros clientes.</p>
-
         <section id="catalogo">
             <h2>Catálogo de Productos</h2>
             <div id="productos"></div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Farmacia</p>
+        <p>SUPER FARMA</p>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
